Prevent horizontal scrollbar from all components that match `.card-front .list-component` CSS selector

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -265,6 +265,7 @@ img.diff_icon {
 
 .card-front .list-component {
   height: 100%;
+  overflow-x: hidden;
 }
 
 .branch-ribbon-container {
